playbtn, linedown, polygon.txt-reader